# bizclaw

./: BACKEND_IMPROVEMENTS.md  BACKEND_IMPROVEMENTS_VI.md  CREDITS.md  Cargo.toml  Dockerfile  Memory.md  README.md  REPOS_ANALYSIS.md  docker-compose.yml
crates/bizclaw-accounting/: Cargo.toml
crates/bizclaw-accounting/src/: ledger.rs  lib.rs  report.rs  tax.rs  transaction.rs
crates/bizclaw-analytics/: Cargo.toml
crates/bizclaw-analytics/src/: agent.rs  dashboard.rs  insights.rs  kpi.rs  lib.rs  reports.rs
crates/bizclaw-analytics/tests/: test_analytics.rs
crates/bizclaw-banking/: Cargo.toml
crates/bizclaw-banking/src/: account.rs  client.rs  lib.rs  transfer.rs
crates/bizclaw-einvoice/: Cargo.toml
crates/bizclaw-einvoice/src/: client.rs  invoice.rs  lib.rs  provider.rs
crates/bizclaw-gateway/: Cargo.toml
crates/bizclaw-gateway/src/: db_migrations.rs  lib.rs
crates/bizclaw-gateway/src/routes/: api_accounting.rs  api_inventory.rs  api_payment.rs  api_support.rs
crates/bizclaw-inventory/: Cargo.toml
crates/bizclaw-inventory/src/: alert.rs  lib.rs  stock.rs  warehouse.rs
crates/bizclaw-invoice/: Cargo.toml
crates/bizclaw-invoice/src/: agent.rs  invoice.rs  lib.rs  payment.rs  reminder.rs  vietqr.rs
crates/bizclaw-invoice/tests/: test_invoice.rs
crates/bizclaw-knowledge/src/: graph.rs  graph_visualizer.rs  lib.rs
crates/bizclaw-legal/: Cargo.toml
crates/bizclaw-legal/src/: agent.rs  compliance.rs  contracts.rs  lib.rs  signature.rs  templates.rs
crates/bizclaw-legal/tests/: test_legal.rs
crates/bizclaw-outreach/: Cargo.toml
crates/bizclaw-outreach/src/: agent.rs  campaigns.rs  lead.rs  lib.rs  sequences.rs  templates.rs
crates/bizclaw-outreach/tests/: test_outreach.rs
crates/bizclaw-payment/: ._Cargo.toml  Cargo.toml
crates/bizclaw-payment/src/: agent.rs  lib.rs  payment.rs  vietqr.rs  wallet.rs
crates/bizclaw-platform/src/: mama.rs
crates/bizclaw-pos/: Cargo.toml
crates/bizclaw-pos/src/: lib.rs  product.rs  receipt.rs  sale.rs
crates/bizclaw-proposal/: Cargo.toml
crates/bizclaw-proposal/src/: lib.rs  quote.rs
crates/bizclaw-skills/src/: builtin.rs
crates/bizclaw-support/: Cargo.toml
crates/bizclaw-support/src/: agent.rs  customer.rs  lib.rs  sla.rs  ticket.rs
docs/: AGENCY_AGENTS_INTEGRATION.md  BIZCLAW_OPC_PLATFORM_VIETNAM.md  COMPETITIVE_ANALYSIS_BIZCLAW_VS_AGENCY_AGENTS.md  DEMO_OPC_CASE_STUDY.md  ROADMAP.md  THOTH_FEATURES_INTEGRATION.md
migrations/: 001_initial_schema.sql
scripts/: reset-demo.sh
skills/agency-derived/: analytics-reporter.md  chief-of-staff.md  content-creator.md  customer-returns.md  customer-service.md  deal-strategist.md  ecommerce-operator.md  finance-analyst.md  growth-hacker.md  legal-compliance-checker.md  outbound-strategist.md  product-manager.md  reality-checker.md  sales-discovery-coach.md  seo-specialist.md  sprint-prioritizer.md  technical-writer.md  tiktok-strategist.md
