[package]
name = "bizclaw-banking"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Banking API integration for Vietnamese banks"

[dependencies]
bizclaw-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true

[features]
default = []
vietinbank = []
vpbank = []
tpbank = []
acb = []
vib = []
