[package]
name = "bizclaw-einvoice"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vietnamese e-invoice integration (VNPT, Viettel, MISA)"

[dependencies]
bizclaw-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true

[features]
default = []
vnpt = []
viettel = []
misa = []
