[package]
name = "bizclaw-inventory"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Inventory management for Vietnamese retail"

[dependencies]
bizclaw-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

[features]
default = []
