[package]
name = "bizclaw-legal"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Legal & compliance agent for Vietnamese market - contracts, regulations, document generation"

[dependencies]
bizclaw-core.workspace = true
bizclaw-tools.workspace = true
bizclaw-knowledge.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
futures.workspace = true
uuid.workspace = true
chrono.workspace = true
rand.workspace = true
sha2.workspace = true
base64.workspace = true

[features]
default = []
vietnam = []

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
