[package]
name = "bizclaw-payment"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Payment gateway for Vietnamese retail - VietQR, MoMo, ZaloPay, Cash"

[dependencies]
bizclaw-core.workspace = true
bizclaw-db.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
futures.workspace = true
uuid.workspace = true
chrono.workspace = true

[features]
default = []
vietqr = []
momo = []
zalopay = []
