[package]
name = "bizclaw-proposal"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Quotation & proposal system for Vietnamese retail"

[dependencies]
bizclaw-core.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true

[features]
default = []
