[package]
name = "bizclaw-support"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Customer support & ticket system for Vietnamese retail"

[dependencies]
bizclaw-core.workspace = true
bizclaw-db.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
futures.workspace = true
uuid.workspace = true
chrono.workspace = true

[features]
default = []
